--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.131.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zustand": "^3.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
