--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shader_effects",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@react-three/drei": "^7.3.1",
